--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             </div>
 
         </div>
+        <h1>Alice has big eyes</h1>
         <script src="./eyes.js"></script>
     </body>
 </html>
